preparation for hw2: panorama stitching

--- a/img_proc_basic_GDI/img_proc_basic_GDI.vcxproj
+++ b/img_proc_basic_GDI/img_proc_basic_GDI.vcxproj
@@ -95,7 +95,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="image_c.h" />
+    <ClInclude Include="image_pano.h" />
     <ClInclude Include="img_proc_basic_GDI.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stb_image.h" />
@@ -153,6 +154,7 @@
     <ClCompile Include="image_c.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="image_pano.cpp" />
     <ClCompile Include="img_proc_basic_GDI.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
