--- a/img_proc_basic_GDI/img_proc_basic_GDI.vcxproj.filters
+++ b/img_proc_basic_GDI/img_proc_basic_GDI.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="image_c.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="image_pano.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="image_c.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="image_pano.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
